<resources>

    <string name="app_name">TSAdmin</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Trueffelscout Admin</string>
    <string name="title_list">Tap on trueffel for edit</string>
    <string name="add_truffa">Adauga trufa</string>
    <string name="text_update">Last update:</string>
    <string name="new_msg">No messages</string>
    <string name="euro">€/kg</string>
    <string name="save">Save</string>
    <string name="typeA">Type</string>
    <string name="typeB">Type B</string>
    <string name="typeC">Type C</string>
    <string name="descr">Description</string>
    <string name="trufa_name">Trueffel Name</string>
    <string name="vis_public">Public</string>
    <string name="vis_private">Private</string>
    <string name="cancel">Cancel</string>
    <string name="img_upload">Check to save image</string>
    <string name="notificationMsg">Trebe trufe!!!</string>
    <string name="delete_trueffel_txt">Delete trueffel</string>
    <string name="edit_trueffel_txt">Edit trueffel</string>
    <string name="save_truffel_successfully">Successfully saved!</string>
    <string name="save_truffel_error">An errorm occured while saving truffel!</string>
    <string name="trufffles">Truffles</string>
    
    <string name="messages">Messages</string>
    <string name="home">Home</string>
    <string name="server_register">You were registered to GCM server</string>
    <string name="server_unregister">You were unregistered from server</string>
    <string name="server_unregister_error">Unregitering from server error</string>
    <string name="gcm_deleted">Deleted message</string> 
    <string name="gcm_error">GCM error</string> 
    <string name="gcm_recoverable_error">GCM recoverable error</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    
    <string name="unit">€/kg</string>
    <string name="unit_eur">€</string>
    <string name="from">From:</string>
    <string name="tel">Tel:</string>
    <string name="mail">Mail:</string>
    <string name="reveived">Received:</string>
    <string name="reply">Reply</string>
    <string name="unregister">Unregister</string>

</resources>