<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >    
    
    
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/name"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"
         android:layout_marginTop="20dip"/>
 
     <EditText
         android:id="@+id/etUser"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dip"
         android:layout_marginBottom="20dip"
         android:inputType="textPersonName" />
 
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:text="@string/email"
         android:layout_marginLeft="10dip"
         android:layout_marginRight="10dip"/>
 
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_margin="10dip"
         android:layout_marginBottom="20dip"
         android:inputType="textEmailAddress" />

     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:orientation="horizontal" >

         <Button
             android:id="@+id/btnRegister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/register" />

         <Button
             android:id="@+id/btnUnregister"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="@string/unregister" />

     </LinearLayout>
 
</LinearLayout>
