<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:isScrollContainer="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbars="vertical" >

        <RelativeLayout
            android:id="@+id/trufa_settings"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="8dp"
            android:visibility="visible" >

            <EditText
                android:id="@+id/edit_name_trufa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/trufa_name"
                android:inputType="textMultiLine" />

            <RadioGroup
                android:id="@+id/radioGroup1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/edit_name_trufa"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/edit_public"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/vis_public" />

                <RadioButton
                    android:id="@+id/edit_private"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/vis_private" />
            </RadioGroup>

            <ImageView
                android:id="@+id/edit_img_trufa"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:layout_toLeftOf="@+id/edit_name_trufa"
                android:src="@drawable/ic_launcher" />
            
            <LinearLayout 
                android:id="@+id/update_prices_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/radioGroup1"
                android:layout_marginTop="25dp" >
              	
            </LinearLayout>
            
            <LinearLayout
                android:id="@+id/add_prices_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/update_prices_layout"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/editPriceLayout_0"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <EditText
                        android:id="@+id/add_char"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/typeA"
                        android:inputType="text|textMultiLine"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/add_price"
                        android:layout_width="80dp"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="0"
                        android:inputType="number" />

                    <TextView
                        android:id="@+id/textView0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        
                        android:text="@string/euro" />
                </LinearLayout>

            </LinearLayout>



            <ImageView
                android:id="@+id/edit_add_pricechar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@id/add_prices_layout"
                android:onClick="addNewPriceText"
                android:src="@drawable/plus" />

<!--            

            <EditText
                android:id="@+id/edit_car2"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/edit_char1"
                android:ems="10"
                android:inputType="text"
                android:text="@string/typeB" />

            <EditText
                android:id="@+id/edit_price2"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_car2"
                android:layout_alignLeft="@id/edit_price1"
                android:layout_below="@id/edit_price1"
                android:ems="10"
                android:inputType="number" />

            <EditText
                android:id="@+id/edit_char3"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/edit_car2"
                android:ems="10"
                android:inputType="text"
                android:text="@string/typeC" />

            <EditText
                android:id="@+id/edit_price3"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_char3"
                android:layout_alignLeft="@id/edit_price2"
                android:layout_below="@id/edit_price2"
                android:ems="10"
                android:inputType="number" />

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_price3"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/edit_price3"
                android:text="@string/euro" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/edit_price2"
                android:layout_alignBottom="@+id/edit_price2"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/edit_price2"
                android:text="@string/euro" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@id/edit_price1"
                android:layout_alignParentRight="true"
                android:layout_toRightOf="@id/edit_price1"
                android:text="@string/euro" />
                 --> 

            <ImageButton
                android:id="@+id/camButton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_below="@+id/edit_add_pricechar"
                android:layout_marginTop="15dp"
                android:scaleType="centerInside"
                android:src="@drawable/foto_camera" />

            <EditText
                android:id="@+id/edit_descr"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@id/camButton"
                android:layout_marginTop="15dp"
                android:ems="10"
                android:hint="@string/descr"
                android:inputType="textMultiLine" />

            <requestFocus />




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/edit_descr"
                android:layout_marginTop="20dp"
                android:orientation="horizontal" >



                <Button
                    android:id="@+id/save_trufa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="saveTrufa"
                    android:text="@string/save" 
                    
                    />




                <Button
                    android:id="@+id/cancel_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:onClick="cancelTrufa"
                    android:text="@string/cancel" />

            </LinearLayout>




            <CheckBox
                android:id="@+id/edit_img_confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/camButton"
                android:layout_toRightOf="@+id/camButton"
                android:text="@string/img_upload"
                android:visibility="gone" />




            <ImageView
                android:id="@+id/edit_delete_pricechar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add_prices_layout"
                android:layout_marginTop="15dp"
                android:layout_toLeftOf="@+id/edit_add_pricechar"
                android:onClick="deletePriceChar"
                android:src="@drawable/minus" />

        </RelativeLayout>

        <ProgressBar
            android:id="@+id/edit_trufa_pb"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="false"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="100dp" />
    </LinearLayout>

</ScrollView>